apps/web-system/blog/app/http-route.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.mirceanton.com/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: blog
spec:
  hostnames: ["mirceanton.com"]
  parentRefs:
    - name: envoy-public
      namespace: network-system
  rules:
    - backendRefs:
        - name: blog
          namespace: web-system
          port: 8080
